--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ env.APP_NAME }}
-          path: build/${{ env.APP_NAME }}
+          path: build/Android
           
   buildAndroidAAB:
     name: Build for Android(AAB)
@@ -104,7 +104,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ env.APP_NAME }}
-          path: build/${{ env.APP_NAME }}
+          path: build/Android
           
   SendTelegramNotifyApk:
     runs-on: ubuntu-latest
@@ -118,7 +118,7 @@ jobs:
         id: download
         with:
             name: ${{ env.APP_NAME }}
-            path: ${{ github.workspace }}/build/${{ env.APP_NAME }}
+            path: ${{ github.workspace }}/build/Android/${{ env.APP_NAME }}
             
       - name: send telegram message
         uses: appleboy/telegram-action@master
@@ -140,7 +140,7 @@ jobs:
         id: download
         with:
             name: ${{ env.APP_NAME }}
-            path: ${{ github.workspace }}/build/${{ env.APP_NAME }}
+            path: ${{ github.workspace }}/build/Android/${{ env.APP_NAME }}
             
       - name: send telegram message
         uses: appleboy/telegram-action@master
