--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -118,7 +118,7 @@ jobs:
         id: download
         with:
             name: ${{ env.APP_NAME }}
-            path: ${{ github.workspace }}/build/Android/${{ env.APP_NAME }}
+            path: ${{ github.workspace }}/build/Android
             
       - name: send telegram message
         uses: appleboy/telegram-action@master
@@ -140,7 +140,7 @@ jobs:
         id: download
         with:
             name: ${{ env.APP_NAME }}
-            path: ${{ github.workspace }}/build/Android/${{ env.APP_NAME }}
+            path: ${{ github.workspace }}/build/Android
             
       - name: send telegram message
         uses: appleboy/telegram-action@master
