--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -128,10 +128,10 @@ jobs:
               message: "${{ env.APP_NAME }}"
               document: '${{ github.workspace }}/build/Android/${{ env.APP_NAME }}.apk'
               
-  SendTelegramNotifyAAB:
+  SendTelegramNotify:
     runs-on: ubuntu-latest
-    needs: buildAndroidAAB
-    name: Send Telegram Notify AAB
+    needs: [buildAndroidAPK,buildAndroidAAB]
+    name: Send Telegram Notify
     
     steps: 
       - uses: actions/checkout@v2
@@ -142,10 +142,18 @@ jobs:
             name: ${{ env.APP_NAME }}
             path: ${{ github.workspace }}/build/Android
             
-      - name: send telegram message
+      - name: send apk
         uses: appleboy/telegram-action@master
         with:
               to: ${{ env.ChatID_AAB }}
               token: ${{ env.BotToken }}
-              message: "${{ env.APP_NAME }}"
+              message: " "
+              document: '${{ github.workspace }}/build/Android/${{ env.APP_NAME }}.apk'
+              
+      - name: send aab
+        uses: appleboy/telegram-action@master
+        with:
+              to: ${{ env.ChatID_AAB }}
+              token: ${{ env.BotToken }}
+              message: " "
               document: '${{ github.workspace }}/build/Android/${{ env.APP_NAME }}.aab'
